paragraph and img css correctionto avoid overlap on small screen

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -113,6 +113,7 @@ body{
 	/*margin-top: 50px;*/
 	margin-left: 75px;
 	left:30px;
+	text-align: center!important;
 }
 
 /*.service-heading{
@@ -167,23 +168,23 @@ body{
 }
 .content{
 	font-size: 20px;
-	padding: 30px;
-	position: absolute;
-	/*display: inline-block;*/
+	padding-left: 30px;
 }
 
 .content-heading{
 	font-size: 23px;
-	padding: 30px;
-	/*margin-top: 100px*/
+}
+
+.content-subhead{
+
 }
 
 .myphoto{
-	/*display: inline-block;*/
-	/*position: absolute;*/
 	height: 300px;
 	width: 300px;
 }
+
+
 /*INSTAGRAM ICON -------------------------------------------*/
 .ig-b- { 
 	display: inline-block;
